--- a/src/pages/experience.module.scss
+++ b/src/pages/experience.module.scss
@@ -1,5 +1,5 @@
 .about {
-    padding: 5rem var(--marginMobile);
+    padding: 8rem var(--marginMobile);
     background-color: var(--colorBrokenWhite);
 
     hr {
