--- a/src/pages/prepare.module.scss
+++ b/src/pages/prepare.module.scss
@@ -1,5 +1,5 @@
 .tipsWrapper {
-    padding: 5rem 0;
+    padding: 8rem 0 4rem 0;
     background-color: var(--colorWhite);
     background-image: url(../../static/images/square-green.svg);
 }
