--- a/src/pages/stories.module.scss
+++ b/src/pages/stories.module.scss
@@ -1,5 +1,5 @@
 .rianne {
-    padding-top: 5rem;
+    padding-top: 7rem;
     background-color: var(--colorGreen);
 
 
